[project]
name = "neoapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Willians Silva",email = "107960747+Willians-S-S@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include = "neoapp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
